testing/macro-tests/tests/ui/generated_requires_many_timestamp.stderr
error: generated(insert = ...) currently supports only single-value fields
  --> tests/ui/generated_requires_many_timestamp.rs:24:21
   |
24 |             ident = "created_on_insert",
   |                     ^^^^^^^^^^^^^^^^^^^
